corrected  the stretch effect of video-icon

--- a/submissions/YuraZagor/hooliPopup/style.css
+++ b/submissions/YuraZagor/hooliPopup/style.css
@@ -26,6 +26,7 @@
 	width: 2.1em;
 	height: 2.1em;
 	cursor: pointer;
+	object-fit: cover;
 }
 
 .sub-menu img {
